add corrections to Collection tasks